<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.discover.DiscoverFragment"
    android:background="@color/purple">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discover_movies"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="35dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <Spinner
                android:id="@+id/spinner_release_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:prompt="@string/release_year_prompt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <Spinner
                android:id="@+id/spinner_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:prompt="@string/genre_prompt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_by"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <Spinner
                android:id="@+id/spinner_sort_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:prompt="@string/sort_by_prompt"/>

            <Button
                android:id="@+id/discover_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discover_movies"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/info_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/info"
                    tools:ignore="ContentDescription"
                    android:layout_marginTop="42dp"
                    app:tint="@color/grey_2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_discover_movies"
                    android:textSize="16sp"
                    android:paddingStart="15dp"
                    android:paddingLeft="5dp"
                    android:layout_marginTop="45dp"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>