<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/banner"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/welcome_to_cinemax"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cinemax_description"
            android:textSize="16sp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/purple_200">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/news_icon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/news"
                    tools:ignore="ContentDescription"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:tint="@color/grey_2"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/news_icon"
                    app:layout_constraintEnd_toStartOf="@id/news_arrow"
                    app:layout_constraintHorizontal_bias="0.5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/news"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/grey_2"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/latest_movie_imdb"
                        android:textSize="14sp"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/grey_2"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/news_arrow"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/right"
                    tools:ignore="ContentDescription"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:tint="@color/grey_2"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_discover_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/purple_500">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/discover_movies_icon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/movie"
                    tools:ignore="ContentDescription"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/discover_movies_icon"
                    app:layout_constraintEnd_toStartOf="@id/discover_movies_arrow"
                    app:layout_constraintHorizontal_bias="0.5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/discover_movies"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/find_movies_by"
                        android:textSize="14sp"
                        android:layout_marginTop="4dp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/discover_movies_arrow"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/right"
                    tools:ignore="ContentDescription"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_maps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/purple_700">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/maps_icon"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cinema"
                    tools:ignore="ContentDescription"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:tint="@color/grey_1"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    android:paddingLeft="16dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/maps_icon"
                    app:layout_constraintEnd_toStartOf="@id/maps_arrow"
                    app:layout_constraintHorizontal_bias="0.5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Maps"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/grey_1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/find_nearby_cinemas_map"
                        android:textSize="14sp"
                        android:layout_marginTop="4dp"
                        android:textColor="@color/grey_1" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/maps_arrow"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/right"
                    tools:ignore="ContentDescription"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:tint="@color/grey_1"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>